@@ -1985,13 +1985,17 @@
 </tr>
 <tr class="row-odd"><td><p><a class="reference internal" href="GOME2_L2_O3MARP.html"><span class="doc">GOME2_L2_O3MARP</span></a></p></td>
 <td><p>ACSAF/O3MARP</p></td>
-<td><p>GOME2 offline absorbing aerosol index product</p></td>
+<td><p>GOME2 offline absorbing aerosol index from PMD product</p></td>
 </tr>
-<tr class="row-even"><td><p><a class="reference internal" href="GOME2_L2_O3MNTO.html"><span class="doc">GOME2_L2_O3MNTO</span></a></p></td>
+<tr class="row-even"><td><p><a class="reference internal" href="GOME2_L2_O3MARS.html"><span class="doc">GOME2_L2_O3MARS</span></a></p></td>
+<td><p>ACSAF/O3MARS</p></td>
+<td><p>GOME2 offline absorbing layer height and absorbing aerosol index product</p></td>
+</tr>
+<tr class="row-odd"><td><p><a class="reference internal" href="GOME2_L2_O3MNTO.html"><span class="doc">GOME2_L2_O3MNTO</span></a></p></td>
 <td><p>ACSAF/O3MNTO</p></td>
 <td><p>GOME2 near-real-time total column trace gas product</p></td>
 </tr>
-<tr class="row-odd"><td><p><a class="reference internal" href="GOME2_L2_O3MOTO.html"><span class="doc">GOME2_L2_O3MOTO</span></a></p></td>
+<tr class="row-even"><td><p><a class="reference internal" href="GOME2_L2_O3MOTO.html"><span class="doc">GOME2_L2_O3MOTO</span></a></p></td>
 <td><p>ACSAF/O3MOTO</p></td>
 <td><p>GOME2 offline total column trace gas product</p></td>
 </tr>
@@ -3219,19 +3223,23 @@
 <td><p>S5P_PAL/L2__CHOCHO</p></td>
 <td><p>Sentinel-5P L2 Glyoxal (CHOCHO) product</p></td>
 </tr>
-<tr class="row-odd"><td><p><a class="reference internal" href="S5P_PAL_L2_OCLO.html"><span class="doc">S5P_PAL_L2_OCLO</span></a></p></td>
+<tr class="row-odd"><td><p><a class="reference internal" href="S5P_PAL_L2_HDO_S.html"><span class="doc">S5P_PAL_L2_HDO_S</span></a></p></td>
+<td><p>S5P_PAL/L2__HDO__S</p></td>
+<td><p>Sentinel-5P L2 Heavy Water (HDO) product from SRON/SICOR algorithm</p></td>
+</tr>
+<tr class="row-even"><td><p><a class="reference internal" href="S5P_PAL_L2_OCLO.html"><span class="doc">S5P_PAL_L2_OCLO</span></a></p></td>
 <td><p>S5P_PAL/L2__OCLO__</p></td>
 <td><p>Sentinel-5P L2 Chlorine Dioxide (OClO) product</p></td>
 </tr>
-<tr class="row-even"><td><p><a class="reference internal" href="S5P_PAL_L2_SIF.html"><span class="doc">S5P_PAL_L2_SIF</span></a></p></td>
+<tr class="row-odd"><td><p><a class="reference internal" href="S5P_PAL_L2_SIF.html"><span class="doc">S5P_PAL_L2_SIF</span></a></p></td>
 <td><p>S5P_PAL/L2__SIF___</p></td>
 <td><p>Sentinel-5P L2 Solar Induced Fluorescence product</p></td>
 </tr>
-<tr class="row-odd"><td><p><a class="reference internal" href="S5P_PAL_L2_SO2CBR.html"><span class="doc">S5P_PAL_L2_SO2CBR</span></a></p></td>
+<tr class="row-even"><td><p><a class="reference internal" href="S5P_PAL_L2_SO2CBR.html"><span class="doc">S5P_PAL_L2_SO2CBR</span></a></p></td>
 <td><p>S5P_PAL/L2__SO2CBR</p></td>
 <td><p>Sentinel-5P L2 SO2 COBRA product</p></td>
 </tr>
-<tr class="row-even"><td><p><a class="reference internal" href="S5P_PAL_L2_TCWV.html"><span class="doc">S5P_PAL_L2_TCWV</span></a></p></td>
+<tr class="row-odd"><td><p><a class="reference internal" href="S5P_PAL_L2_TCWV.html"><span class="doc">S5P_PAL_L2_TCWV</span></a></p></td>
 <td><p>S5P_PAL/L2__TCWV__</p></td>
 <td><p>Sentinel-5P L2 Total Column Water Vapor product</p></td>
 </tr>
