@@ -4,6 +4,7 @@
 * Updates to product ingestions:
   - GOME-2 L2: added support for O3MARS aerosol layer height and added
     support for O3MARP V5
+  - S5P PAL L2: added support for SRON/SICOR HDO (L2__HDO__S) product
 
 1.23 2024-07-30
 ~~~~~~~~~~~~~~~
